2008-07-25  Marius Siegas  <inkredibl@gmail.com>

	* src/gnome-cmd-xfer.cc:
	Fix for "(null)" filename in message dlg

2008-07-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-search-dialog.cc:
	Fixed problem #532615 (file operations on wrong file)

	* src/gnome-cmd-main-win.cc:
	Fixed problem #522430 (quick search for files starting with uppercase)

2008-07-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-quicksearch-popup.cc:
	Fixed problem #538806 (quick search in root dir)

2008-07-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-user-actions.cc:
	Fix for setting the current working directory to the remote inactive one (CTRL+., CTRL+LEFT/RIGHT)

2008-07-20  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	Fix for bug introduced in rev. #1669

2008-07-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-prepare-xfer-dialog.cc:
	Fix for upload problem

2008-07-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-remote-dialog.cc:
	Removed superfluous code for GnomeCmdConFtp

2008-07-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.h:
	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-remote-dialog.cc:
	Fixed problem #541404 (update of host names)

	* src/gnome-cmd-con-ftp.cc:
	Removed superfluous code for anonymous user handling

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	Removed superfluous code for host_port handling

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	Removed superfluous code for user_name handling

	* src/gnome-cmd-con-ftp.cc:
	Removed superfluous code for host_name handling

	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h: