@@ -237,7 +237,6 @@ dnl =============================
 dnl Checks for library functions
 dnl =============================
 
-AC_FUNC_FNMATCH_GNU
 AC_FUNC_MMAP
 
 dnl ================================================================
